# OpenVPN-LDAP-Groups

./: .gitignore  BUILD  Makefile  Makefile.am  OpenVPNLDAPGroups.kdev4  README.md  config.sample.yml  configure.ac
.kdev4/: OpenVPNLDAPGroups.kdev4
include/: ClientContext.h  LDAPQuerier.h  PluginContext.h  VPNPlugin.h  stdafx.h
pch/: Makefile.am  pch.h
src/: ClientContext.cpp  LDAPQuerier.cpp  Makefile.am  PluginContext.cpp  VPNPlugin.cpp
